maj Dispo Pseudo (prenom)

--- a/views/index.twig.html
+++ b/views/index.twig.html
@@ -15,9 +15,10 @@
         <label class="form_col" for="lastName">Nom :</label>
         <input class="bouton" name="lastName" id="lastName" type="text" />
         <br /><br />
-
+        
         <label class="form_col" for="firstName">Prénom :</label>
         <input class="bouton" name="firstName" id="firstName" type="text" />
+        <label id="erreur" type="text" style="display:none">*Déja utilisé!</label>
         <br /><br />
 
         <select class="bouton" name="continent" id="continent">
